asteria/core/tests/errors/elaboration_errors/variable_not_in_scope_hint_closest_variables.asteriacore
f : forall {a : Type}. a -> a -> a -> a
  = \{a} -> \foo -> \bar -> \baz -> baar
  ;;
